deployments/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: jaycynth/k8s-network-policies-user:v0.2
        ports:
        - containerPort: 50051
